Ported to protocol-v1